Annotated all code and reformatted it

--- a/templates/Profile/delete_profile.html
+++ b/templates/Profile/delete_profile.html
@@ -2,13 +2,17 @@
 {% load bootstrap_tags %}
 {% block content %}
 
-<form class="login" method="POST" action="{% url 'delete_profile' %}" class="" />
+    <!-- Delete Profile Form -->
+    <form class="login" method="POST" action="{% url 'delete_profile' %}" class=""/>
     <legend>Delete Account {{ user.email }}</legend>
     <p>Type in your email address to confirm your account deletion</p>
     {% csrf_token %}
     {{ form| as_bootstrap }}
+
+    <!-- Submit Button -->
     <button class="btn btn-primary" type="submit">Submit</button>
+    <!-- Back Button -->
     <a class="btn btn-primary" href="/profile">Back</a>
-</form>
+    </form>
 
 {% endblock %}
