--- a/templates/Profile/edit_profile.html
+++ b/templates/Profile/edit_profile.html
@@ -2,12 +2,16 @@
 {% load bootstrap_tags %}
 {% block content %}
 
-<form class="login" method="POST" action="{% url 'edit_profile' %}" class="" />
+    <!-- Edit Profile Form -->
+    <form class="login" method="POST" action="{% url 'edit_profile' %}" class=""/>
     <legend>Edit Profile</legend>
     {% csrf_token %}
     {{ form| as_bootstrap }}
+
+    <!-- Save Button -->
     <button class="btn btn-primary" type="submit">Save</button>
+    <!-- Back Button -->
     <a class="btn btn-primary" href="/profile">Back</a>
-</form>
+    </form>
 
 {% endblock %}
