--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+<!-- Haven't currently used flatpages in this Website but may incorporate so leaving here for the meantime -->
 {% block content %}
    <h2>{{ flatpage.title }}</h2>
    {{ flatpage.content }}
