--- a/templates/forum/post_form.html
+++ b/templates/forum/post_form.html
@@ -2,26 +2,29 @@
 {% load bootstrap_tags %}
 {% load staticfiles %}
 {% block head_js %}
-<script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
-<script type="text/javascript">
- tinyMCE.init({
-   mode: "textareas",
-   theme: "modern",
-   plugins: "paste",
-});
-</script>
+    <script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
+    <script type="text/javascript">
+        tinyMCE.init({
+            mode: "textareas",
+            theme: "modern",
+            plugins: "paste",
+        });
+    </script>
 {% endblock %}
 {% block content %}
- <section class="center-form">
-   <div class="col-md-9">
-     <form method="post" action="{{ form_action }}">
-       {% csrf_token %}
-       {{ form|as_bootstrap }}
-       <div class="form-group">
-           <a class="btn btn-primary" href="javascript:history.back()">Back</a>
-            <button type="submit" class="btn btn-primary">{{button_text}}</button>
-       </div>
-     </form>
-   </div>
- </section>
+    <!-- New Post Form -->
+    <section class="center-form">
+        <div class="col-md-9">
+            <form method="post" action="{{ form_action }}">
+                {% csrf_token %}
+                {{ form|as_bootstrap }}
+                <div class="form-group">
+                    <!-- Back Button -->
+                    <a class="btn btn-primary" href="javascript:history.back()">Back</a>
+                    <!-- Submit Button -->
+                    <button type="submit" class="btn btn-primary">{{ button_text }}</button>
+                </div>
+            </form>
+        </div>
+    </section>
 {% endblock %}
