--- a/templates/price.html
+++ b/templates/price.html
@@ -2,90 +2,120 @@
 {% load coffee_extras %}
 {% block content %}
 
+    <!-- Price Title -->
     <div class="Price-img">
         <h2>Price</h2>
     </div>
-<br>
+    <br>
+
+    <!-- Price Header Information -->
     <p class="text-center">
         Come take a look at our price list of monthly coffee subscription packages below.
         With the freshest coffee in town, we guarantee a great start to your day.
-        You will not only be purchasing the great tasting coffees we provide, but also the welcoming staff and friendly environment.
+        You will not only be purchasing the great tasting coffees we provide, but also the welcoming staff and friendly
+        environment.
         Hurry and become our regular customer!
 
-    <br><br>
+        <br><br>
 
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
         fugiat nulla pariatur.
     </p>
-    <h6 class="text-center">Please read the <a href="/prices/" data-toggle="modal" data-target="#myModal"><b>Terms and Conditions</b></a> before purchasing</h6>
 
-    <!-- Modal -->
+    <!-- Terms and Conditions -->
+    <h6 class="text-center">Please read the <a href="/prices/" data-toggle="modal" data-target="#myModal"><b>Terms and
+        Conditions</b></a> before purchasing</h6>
+
+    <!-- Terms and Conditions Modal -->
     <div id="myModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
+        <div class="modal-dialog">
 
-        <!-- Modal content-->
-        <div class="modal-content">
-          <div class="modal-header modal-header_tc">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h2 class="modal-title modal-title_tc">Terms & Conditions</h2>
-          </div>
-          <div class="modal-body modal-body_tc">
-              <p><b>1.1 PURCHASES</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
-              <p><b>1.2 CANCELLATIONS</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
-              <p><b>2. GOVERNING LAW</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
-              <p><b>3. INTELLECTUAL PROPERTY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
-              <p><b>4. PRIVACY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header modal-header_tc">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h2 class="modal-title modal-title_tc">Terms & Conditions</h2>
+                </div>
+                <div class="modal-body modal-body_tc">
+                    <p><b>1.1 PURCHASES</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                    <p><b>1.2 CANCELLATIONS</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                    <p><b>2. GOVERNING LAW</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                    <p><b>3. INTELLECTUAL PROPERTY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                    <p><b>4. PRIVACY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                </div>
+                <div class="modal-footer modal-footer_tc">
+                    <h6>Any questions please email us at <a
+                            href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></h6>
+                </div>
             </div>
-            <div class="modal-footer modal-footer_tc">
-                <h6>Any questions please email us at <a href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></h6>
-            </div>
+
         </div>
-
-      </div>
     </div>
-    <!--End Modal-->
+
 
     <hr>
+    <!-- Table of Coffee Subscriptions and their Prices -->
     <table class="table table-striped">
         <thead>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Price</th>
-            </tr>
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Price</th>
+        </tr>
         </thead>
         <tbody>
-            {% for coffee in coffees %}
-                <tr>
-                    <td>{{ coffee.name }}</td>
-                    <td>{{ coffee.description }}</td>
-                    <td>£{{ coffee.price }}</td>
-                </tr>
-            {% endfor %}
+        {% for coffee in coffees %}
+            <tr>
+                <td>{{ coffee.name }}</td>
+                <td>{{ coffee.description }}</td>
+                <td>£{{ coffee.price }}</td>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
     <hr>
+
+    <!-- Link to Purchase -->
     <p class="text-center buypagelink stretch">Like what you see? Head on over to our buy page <a href="/coffees"><b>here</b></a>.
         Don't forget to create an account first!</p>
     <hr>
-    <p class="text-center querycontact">Got a question? No worries, just email us over the query through the link below and one of our team will get back to you as soon as possible.
-    <br>
+
+    <!-- Footer Information -->
+    <p class="text-center querycontact">Got a question? No worries, just email us over the query through the link below
+        and one of our team will get back to you as soon as possible.
+        <br>
         <a class="btn btn-primary contactstarb" href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></p>
+
 {% endblock %}
