--- a/static/css/style.css
+++ b/static/css/style.css
@@ -142,7 +142,16 @@ a:hover, a:focus {
     font-size: 11px;
 }
 
+.btn-primary:active, .btn-primary:hover, .btn-primary:focus {
+    background-color: rgba(34, 139, 34, 0.6) !important;
+    border-color: transparent;
+}
+
 /************ HOME *************/
+.home-link {
+    color: #317eac;
+}
+
 .home-announcements {
     font-family: 'Indie Flower', cursive;
     font-size: 20px;
@@ -208,7 +217,7 @@ img.members {
     width: 120px;
     height: 120px;
     border-radius: 100px;
-    border: medium #4b4b4b solid;
+    border: thin #4b4b4b solid;
     margin: 0 20px 0 0;
 }
 
@@ -397,6 +406,7 @@ img.members {
         font-size: 60px !important;
     }
 }
+
 /************ PRICES *************/
 .Price-img {
     background: url('../../media/images/Coffee1.jpg') no-repeat;
@@ -626,30 +636,57 @@ img.members {
 }
 
 input[type=text], textarea {
-      -webkit-transition: all 0.30s ease-in-out;
-      -moz-transition: all 0.30s ease-in-out;
-      -ms-transition: all 0.30s ease-in-out;
-      -o-transition: all 0.30s ease-in-out;
-      outline: none;
-      padding: 3px 3px 3px 3px;
-      margin: 5px 3px 3px 3px;
-      border: solid 1px rgba(51, 51, 51, 0.7);
-      color: #555555;
+    -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
+    outline: none;
+    padding: 3px 3px 3px 3px;
+    margin: 5px 3px 3px 3px;
+    border: solid 1px rgba(51, 51, 51, 0.7);
+    color: #555555;
 }
 
-input:focus::-webkit-input-placeholder { color:transparent; }
-input:focus:-moz-placeholder { color:transparent; } /* Firefox 18- */
-input:focus::-moz-placeholder { color:transparent; } /* Firefox 19+ */
-input:focus:-ms-input-placeholder { color:transparent; }
-input::-webkit-input-placeholder { color: rgba(87, 87, 87, 0.7); }
-input:-moz-placeholder { color:rgba(87, 87, 87, 0.7); } /* Firefox 18- */
-input::-moz-placeholder { color:rgba(87, 87, 87, 0.7); } /* Firefox 19+ */
-input:-ms-input-placeholder { color:rgba(87, 87, 87, 0.7); }
+input:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+
+input:focus:-moz-placeholder {
+    color: transparent;
+}
+
+/* Firefox 18- */
+input:focus::-moz-placeholder {
+    color: transparent;
+}
+
+/* Firefox 19+ */
+input:focus:-ms-input-placeholder {
+    color: transparent;
+}
+
+input::-webkit-input-placeholder {
+    color: rgba(87, 87, 87, 0.7);
+}
+
+input:-moz-placeholder {
+    color: rgba(87, 87, 87, 0.7);
+}
+
+/* Firefox 18- */
+input::-moz-placeholder {
+    color: rgba(87, 87, 87, 0.7);
+}
+
+/* Firefox 19+ */
+input:-ms-input-placeholder {
+    color: rgba(87, 87, 87, 0.7);
+}
 
 input[type=text]:focus, textarea:focus {
-  box-shadow: 0 0 5px rgba(132, 132, 132, 0.71);
-  padding: 3px 0px 3px 3px;
-  margin: 5px 1px 3px 0px;
+    box-shadow: 0 0 5px rgba(132, 132, 132, 0.71);
+    padding: 3px 0px 3px 3px;
+    margin: 5px 1px 3px 0px;
 }
 
 .read-moreblog {
@@ -682,9 +719,10 @@ input[type=text]:focus, textarea:focus {
     margin-top: 0;
 }
 
-.pagination>li>a, .pagination>li>span, .pagination>li>a:hover, .pagination>li>span:hover, .pagination>li>a:focus, .pagination>li>span:focus {
+.pagination > li > a, .pagination > li > span, .pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {
     color: #333333;
 }
+
 /************ FORUM *************/
 .Forum-img {
     background: url('../../media/images/Coffee9.jpg') no-repeat;
@@ -1003,22 +1041,22 @@ input[type=text]:focus, textarea:focus {
 }
 
 .modal {
-  text-align: center;
+    text-align: center;
 }
 
 @media screen and (min-width: 768px) {
-  .modal:before {
-    display: inline-block;
-    vertical-align: middle;
-    content: " ";
-    height: 100%;
-  }
+    .modal:before {
+        display: inline-block;
+        vertical-align: middle;
+        content: " ";
+        height: 100%;
+    }
 }
 
 .modal-dialog {
-  display: inline-block;
-  text-align: left;
-  vertical-align: middle;
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
 }
 
 .delete_modal > div {
@@ -1059,6 +1097,7 @@ input[type=text]:focus, textarea:focus {
 .profile-options > div > button {
     color: white;
 }
+
 /************ LOGIN *************/
 .login {
     padding-top: 50px;
