--- a/templates/About.html
+++ b/templates/About.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 
+    <!-- About Title -->
     <div class="About-img">
         <h2>Starbex</h2>
     </div>
 
-
+    <!-- About Header Information -->
     <div class="About-title"><p>Find out all about our team and the coffees we sell here at <b>Starbex</b>! Lorem ipsum
         dolor sit amet,
         consectetur adipisicing elit, sed do eiusmod. Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -14,6 +15,7 @@
         commodo consequat.</p>
     </div>
 
+    <!-- About: Member Information -->
     <div class="col-sm-12 text-center about-members">
         <div class="col-sm-3">
             <br>
@@ -62,7 +64,7 @@
         </div>
     </div>
 
-
+    <!-- About: Our Aim -->
     <div class="About-info col-sm-12"><p><span>Our Aim</span> is to provide the <span>freshest</span> coffees to our
         customers in a
         <span>friendly</span> environment. Our staff go above and beyond for our customers making sure everyone leaves
@@ -74,6 +76,7 @@
         events in <span>Starbex.</span></p>
     </div>
 
+    <!-- About: Coffee Choices Information -->
     <div class="choices-coffee col-sm-12">
         <div class="col-lg-4 text-center">
             <h2>Coffees</h2>
@@ -83,7 +86,7 @@
             </p>
         </div>
 
-
+        <!-- About: Coffee Choices Pills -->
         <div class="col-lg-8 choices-coffee-info">
             <ul class="nav nav-pills nav-pills-coffees">
                 <li class="active"><a data-toggle="pill" href="#menu1"></a></li>
@@ -99,112 +102,114 @@
                 <div id="menu1" class="tab-pane fade in active">
                     <div class="center-block"><span class="mobile-coffee-name">Cappuccino</span>
                         <p><span>Cappuccino</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
-                                                                                                       src="../media/images/Cappuccino.png">
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img class="" src="../media/images/Cappuccino.png">
                     </div>
                 </div>
                 <div id="menu2" class="tab-pane fade">
                     <div class="center-block"><span class="mobile-coffee-name">Latte</span>
                         <p><span>Latte</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
-                                                                                                       src="../media/images/Latte.png">
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img class="" src="../media/images/Latte.png">
                     </div>
                 </div>
                 <div id="menu3" class="tab-pane fade">
                     <div class="center-block"><span class="mobile-coffee-name">Mocha</span>
                         <p><span>Mocha</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
-                                                                                                       src="../media/images/Mocha.png">
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img class="" src="../media/images/Mocha.png">
                     </div>
                 </div>
                 <div id="menu4" class="tab-pane fade">
                     <div class="center-block"><span class="mobile-coffee-name">Americano</span>
                         <p><span>Americano</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
-                                                                                                       src="../media/images/Americano.png">
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img class="" src="../media/images/Americano.png">
                     </div>
                 </div>
                 <div id="menu5" class="tab-pane fade">
                     <div class="center-block"><span class="mobile-coffee-name">Espresso</span>
                         <p><span>Espresso</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
-                                                                                                       src="../media/images/Espresso.png">
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img class="" src="../media/images/Espresso.png">
                     </div>
                 </div>
                 <div id="menu6" class="tab-pane fade">
                     <div class="center-block"><span class="mobile-coffee-name">Macchiato</span>
                         <p><span>Macchiato</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
-                                                                                                       src="../media/images/Macchiato.png">
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img class="" src="../media/images/Macchiato.png">
                     </div>
                 </div>
                 <div id="menu7" class="tab-pane fade">
                     <div class="center-block"><span class="mobile-coffee-name">Flat White</span>
                         <p><span>Flat White</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><img class=""
-                                                                                                       src="../media/images/Flat-White.png">
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <img class="" src="../media/images/Flat-White.png">
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- About: Personalised Coffee Information -->
     <div class="personal-coffee col-sm-12">
-    <div class="col-lg-4 text-center">
-        <h2>Personalise your Coffee</h2>
-        <p>At <b>Starbex</b> we understand everyone is different. So here is an insight into how you can personalise
-            your coffee when you come into the store. <br> Click on each step!</p>
-    </div>
+        <div class="col-lg-4 text-center">
+            <h2>Personalise your Coffee</h2>
+            <p>At <b>Starbex</b> we understand everyone is different. So here is an insight into how you can personalise
+                your coffee when you come into the store. <br> Click on each step!</p>
+        </div>
 
-
-    <div class="col-lg-8">
-        <br>
-        <div class="panel-group" id="accordion">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                            Step 1</a>
-                    </h4>
-                </div>
-                <div id="collapse1" class="panel-collapse collapse in">
-                    <div class="panel-body"><p><b>Choose your Coffee Bean</b> The most important ingredient is the
-                        Coffee bean, a delicacy that many coffee shops overlook. We stock beans with varying
-                        strengths and origins including Columbia and Guatemala.
-                    </p>
+        <!-- About: Personalised Coffee Panels -->
+        <div class="col-lg-8">
+            <br>
+            <div class="panel-group" id="accordion">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                                Step 1</a>
+                        </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse in">
+                        <div class="panel-body"><p><b>Choose your Coffee Bean</b> The most important ingredient is the
+                            Coffee bean, a delicacy that many coffee shops overlook. We stock beans with varying
+                            strengths and origins including Columbia and Guatemala.
+                        </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                            Step 2</a>
-                    </h4>
-                </div>
-                <div id="collapse2" class="panel-collapse collapse">
-                    <div class="panel-body text-center"><p><b>Choose your milk</b> We have a wide and interesting
-                        selection for
-                        all you lucky customers. We go as far as stocking Almond Soya Milk to Rice Milk... Holy Cow!
-                    </p>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                                Step 2</a>
+                        </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body text-center"><p><b>Choose your milk</b> We have a wide and interesting
+                            selection for
+                            all you lucky customers. We go as far as stocking Almond Soya Milk to Rice Milk... Holy Cow!
+                        </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                            Step 3</a>
-                    </h4>
-                </div>
-                <div id="collapse3" class="panel-collapse collapse">
-                    <div class="panel-body"><p><b>Choose your Flavour</b> Vanilla syrup, Hazelnut syrup ...whatever you
-                        fancy! Finally add some flavour to your coffee to really cure that morning craving.
-                    </p>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                                Step 3</a>
+                        </h4>
+                    </div>
+                    <div id="collapse3" class="panel-collapse collapse">
+                        <div class="panel-body"><p><b>Choose your Flavour</b> Vanilla syrup, Hazelnut syrup ...whatever
+                            you
+                            fancy! Finally add some flavour to your coffee to really cure that morning craving.
+                        </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 {% endblock %}
