--- a/templates/base.html
+++ b/templates/base.html
@@ -2,33 +2,46 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Title -->
     <title>Starbex</title>
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+
+    <!----- Links ----->
+    <!-- Styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cerulean/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static "css/font-awesome-4.7.0/css/font-awesome.css" %}">
     <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico"/>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link rel="stylesheet" href="{% static "css/font-awesome-4.7.0/css/font-awesome.css" %}">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <!-- Polaroid for Home page -->
     <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/normalize.css" %}"/>
     <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/demo.css" %}"/>
     <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/component.css" %}"/>
+
+    <!----- Scripts ----->
+    <!-- Polaroid for Home page -->
     <script src="{% static "js/polaroid-js/modernizr.min.js" %}"></script>
     <script src="{% static "js/polaroid-js/classie.js" %}"></script>
     <script src="{% static "js/polaroid-js/photostack.js" %}"></script>
+
     {% block head_js %}{% endblock head_js %}
 
 </head>
 <body>
 
+
 <div class="masthead navbar-fixed-top">
 
+    <!-- Social media links -->
     <div class="navbar-header header1">
-
         <div class="pull-right">
             <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
             <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
@@ -37,8 +50,8 @@
         </div>
     </div>
 
+    <!-- Header Options -->
     <div class="navbar-header">
-
         <button type="button" class="navbar-toggle mobile-nav" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -46,8 +59,8 @@
         </button>
         <a class="navbar-brand starbex" href="/"><i class="fa fa-coffee" aria-hidden="true"></i> Starbex</a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
 
+    <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav nav-pills pull-left">
             <li><a class="options" href="/about/">About</a></li>
             <li><a class="options" href="/prices/">Prices</a></li>
@@ -72,6 +85,7 @@
         </ul>
     </div>
 
+    <!-- Alert messages -->
     {% if messages %}
         <div class="alert alert-success">
             <div class="messages">
@@ -86,22 +100,27 @@
 
 <div class="container">
 
-
+    <!-- All the page contents -->
     <div class="container">
         {% block content %}
         {% endblock %}
     </div>
 
+    <!-- Footer -->
     <hr class="hr-footer">
-
     <div class="footer">
         <p> Rebecca Manning &copy; <i>Coffee-righted</i></p>
     </div>
 </div>
 </body>
 
-<!-- script references -->
+
+<!------ Scripts ------>
+<!-- JQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+<!-- Bootstrap -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
+<!-- Personalised JQuery -->
 <script src="{% static "js/jquery.js" %}"></script>
+
 </html>
