--- a/templates/blog/postdetail.html
+++ b/templates/blog/postdetail.html
@@ -2,28 +2,29 @@
 {% load staticfiles %}
 
 {% block blogtitle %}
-<div class="Blogpost-img blogpostpage-img blogpostpage-img2" {% if post.image %}
-     style="background: url('/media/{{ post.image }}')" {% endif %}>
-    <h2>{{ post.title }}</h2>
-</div>
+    <!-- Blog Post Title -->
+    <div class="Blogpost-img blogpostpage-img blogpostpage-img2" {% if post.image %}
+         style="background: url('/media/{{ post.image }}')" {% endif %}>
+        <h2>{{ post.title }}</h2>
+    </div>
 {% endblock %}
 
+
 {% block blogcontent %}
+    <!-- Blog Post Content -->
+    <div class="news-info blogpostpage-img">{{ post.published_date }} |
+        <b>Views</b> {{ post.views }} | <b>Tag</b> {{ post.tag }} | <b><a href="/blog">Back to Blog</a></b></div>
 
-<div class="news-info blogpostpage-img">{{ post.published_date }} |
-    <b>Views</b> {{ post.views }} | <b>Tag</b> {{ post.tag }} | <b><a href="/blog">Back to Blog</a></b></div>
+    <div class="content">
+        <h2 class="title-blog-post">{{ post.title }}</h2>
+        <p>{{ post.content|linebreaks }}</p>
 
-<div class="content">
-<h2 class="title-blog-post">{{ post.title }}</h2>
-<p>{{ post.content|linebreaks }}</p>
+        {% load disqus_tags %}
+        {% set_disqus_title post.title %}
+        {% disqus_show_comments %}
+    </div>
 
-{% load disqus_tags %}
-{% set_disqus_title post.title %}
-{% disqus_show_comments %}
-
-</div><!--end content-->
-
-
-<a class="read-moreblog btn btn-primary" href="/blog">Back</a>
+    <!-- Back to Blogs List Button -->
+    <a class="read-moreblog btn btn-primary" href="/blog">Back</a>
 
 {% endblock %}
