--- a/templates/coffees/coffees.html
+++ b/templates/coffees/coffees.html
@@ -2,90 +2,118 @@
 {% load coffee_extras %}
 {% block content %}
 
+    <!-- Purchase Title -->
     <div class="Buy-img">
         <h2>Purchase</h2>
     </div>
-<br>
-    <p class="text-center">Purchase your monthly coffee subscription package below with just a click.
-    <br><br>
+    <br>
 
+    <!-- Purchase Header Information -->
+    <p class="text-center">Purchase your monthly coffee subscription package below with just a click.
+        <br><br>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
         fugiat nulla pariatur.
     </p>
-    <h6 class="text-center">Please read the <a href="/prices/" data-toggle="modal" data-target="#myModal"><b>Terms and Conditions</b></a> before purchasing</h6>
+    <h6 class="text-center">Please read the <a href="/prices/" data-toggle="modal" data-target="#myModal"><b>Terms and
+        Conditions</b></a> before purchasing</h6>
 
-    <!-- Modal -->
+    <!-- Terms and Conditions Modal -->
     <div id="myModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
+        <div class="modal-dialog">
 
-        <!-- Modal content-->
-        <div class="modal-content">
-          <div class="modal-header modal-header_tc">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h2 class="modal-title modal-title_tc">Terms & Conditions</h2>
-          </div>
-          <div class="modal-body modal-body_tc">
-              <p><b>1.1 PURCHASES</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
-              <p><b>1.2 CANCELLATIONS</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
-              <p><b>2. GOVERNING LAW</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
-              <p><b>3. INTELLECTUAL PROPERTY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
-              <p><b>4. PRIVACY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur..</p>
-             </div>
-            <div class="modal-footer modal-footer_tc">
-                <h6>Any questions please email us at <a href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></h6>
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header modal-header_tc">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h2 class="modal-title modal-title_tc">Terms & Conditions</h2>
+                </div>
+                <div class="modal-body modal-body_tc">
+                    <p><b>1.1 PURCHASES</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                    <p><b>1.2 CANCELLATIONS</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                    <p><b>2. GOVERNING LAW</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                    <p><b>3. INTELLECTUAL PROPERTY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                    <p><b>4. PRIVACY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu
+                        fugiat nulla pariatur..</p>
+                </div>
+                <div class="modal-footer modal-footer_tc">
+                    <h6>Any questions please email us at <a
+                            href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></h6>
+                </div>
             </div>
-        </div>
 
-      </div>
+        </div>
     </div>
-    <!--End Modal-->
     <hr>
+
+    <!-- If Subscribed -->
     {% if subscription_valid == True %}
-        <p class="text-center text-capitalize"><u><b>Currently subscribed to {{ name }} <br></b></u> Click <b><a href="#">here</a></b> to cancel subscription</p>
+        <p class="text-center text-capitalize"><u><b>Currently subscribed to {{ name }} <br></b></u> Click <b><a
+                href="#">here</a></b> to cancel subscription</p>
     {% endif %}
+
+    <!-- Table of Prices and options to Purchase -->
     <table class="table table-striped">
         <thead>
-            <tr>
-                <th>Name</th>
-                <th class="Coffee-description">Description</th>
-                <th>Price</th>
-                {% if subscription_valid == False %}
-                    <th class="Subscribe-label">Subscribe</th>
-                {% endif %}
-            </tr>
+        <tr>
+            <th>Name</th>
+            <th class="Coffee-description">Description</th>
+            <th>Price</th>
+            <!-- If Not Subscribed -->
+            {% if subscription_valid == False %}
+                <th class="Subscribe-label">Subscribe</th>
+            {% endif %}
+        </tr>
         </thead>
         <tbody>
-            {% for coffee in coffees %}
-                <tr>
-                    <td>{{ coffee.name }}</td>
-                    <td class="Coffee-description">{{ coffee.description }}</td>
-                    <td>£{{ coffee.price }}</td>
-                    {% if subscription_valid == False %}
+        {% for coffee in coffees %}
+            <tr>
+                <td>{{ coffee.name }}</td>
+                <td class="Coffee-description">{{ coffee.description }}</td>
+                <td>£{{ coffee.price }}</td>
+                <!-- If Not Subscribed -->
+                {% if subscription_valid == False %}
                     <td class="Subscribe-paypal">{% paypal_form_for coffee user %}</td>
-                    {% endif %}
-                </tr>
-            {% endfor %}
+                {% endif %}
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
     <hr>
-    <p class="text-center querycontact">Got a question? No worries, just email us over the query through the link below and one of our team will get back to you as soon as possible.
+
+    <!-- Purchase Footer Information -->
+    <p class="text-center querycontact">Got a question? No worries, just email us over the query through the link below
+        and one of our team will get back to you as soon as possible.
         <br>
-    <a class="btn btn-primary contactstarb" href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></p>
+        <a class="btn btn-primary contactstarb" href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></p>
 {% endblock %}
