--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
+
+    <!-- Login Form -->
     <form class="login" role="form" method="post" action="{% url 'login' %}">
         <legend>Login</legend>
         {% csrf_token %}
         {{ form| as_bootstrap }}
         <div class="form-group">
+            <!-- Submit Button -->
             <button type="submit" class="btn btn-primary">Login</button>
         </div>
     </form>
+
 {% endblock %}
