--- a/templates/paypal/paypal_cancel.html
+++ b/templates/paypal/paypal_cancel.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-
+    <!-- Subscription Cancelled -->
     <h1>You've cancelled the purchase of this item!</h1>
-
 {% endblock %}
