--- a/templates/register.html
+++ b/templates/register.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
+
+    <!-- Register Form -->
     <form class="login" role="form" method="post" action="{% url 'register' %}">
         <legend>Create a new account</legend>
         {% csrf_token %}
         {{ form| as_bootstrap }}
         <div class="form-group">
+            <!-- Submit Button -->
             <button type="submit" class="btn btn-primary">Create account</button>
         </div>
     </form>
+
 {% endblock %}
