--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!----- Links ----->
+    <!-- Links -->
     <!-- Styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="{% static "css/style.css" %}">
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/demo.css" %}"/>
     <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/component.css" %}"/>
 
-    <!----- Scripts ----->
+    <!-- Scripts -->
     <!-- Polaroid for Home page -->
     <script src="{% static "js/polaroid-js/modernizr.min.js" %}"></script>
     <script src="{% static "js/polaroid-js/classie.js" %}"></script>
@@ -115,7 +115,7 @@
 </body>
 
 
-<!------ Scripts ------>
+<!-- Scripts -->
 <!-- JQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 <!-- Bootstrap -->
